# ForestBot-RS

./: .env.example  .gitignore  CASINO.md  COMMANDS.md  Cargo.toml  GODS.md  INSTALL.md  README.md  TRADEFEATURES.md  casino-schema.sql  config.json  example.config.json  example.debug.json  todo.md  todo2.md
godtexts/: SOURCES.MD  acim.txt.zst  agelesswisdom.txt.zst  anthroposophy.txt.zst  aquarian.txt.zst  aztec.txt.zst  babylonian.txt.zst  bahai.txt.zst  bookofmormon.txt.zst  buddhism.txt.zst  christianscience.txt.zst  confucianism.txt.zst  deuterocanon.txt.zst  discordianism.txt.zst  egyptian.txt.zst  faithism.txt.zst  falungong.txt.zst  gnosticism.txt.zst  hawaiian.txt.zst  heavensgate.txt.zst  hermeticism.txt.zst  hinduism.txt.zst  iching.txt.zst  jainism.txt.zst  kabbalah.txt.zst  kjv.txt.zst  koran.txt.zst  lawofone.txt.zst  mayan.txt.zst  moorishscience.txt.zst  mormon.txt.zst  neoplatonism.txt.zst  norse.txt.zst  olympian.txt.zst  orphic.txt.zst  piby.txt.zst  processchurch.txt.zst  raelism.txt.zst  rastafarianism.txt.zst  shaker.txt.zst  (+10 more)
json/: ai_providers.json  bad_words.json  bet_limits.json  bridge_unsafe_commands.json  commands_censorship.json  mc_blacklist.json  mc_whitelist.json  stat_exclusions.json  url_blacklist_domains.hosts  url_whitelist_domains.hosts  word_whitelist.json
src/: config.rs  main.rs
src/commands/: afk.rs  ai.rs  alias.rs  askgod.rs  battleship.rs  calc.rs  checkers.rs  crouch.rs  daynight.rs  discord.rs  drop.rs  duel.rs  equip.rs  fadvs.rs  greeting.rs  hardware.rs  health.rs  help.rs  joins.rs  lastseen.rs  link.rs  market.rs  marry.rs  mod.rs  msgcount.rs  news.rs  pearl.rs  ping.rs  playtime.rs  poll.rs  quote.rs  reload.rs  report.rs  reversi.rs  roast.rs  server_summary.rs  slurcount.rs  stat_history.rs  tps.rs  trade.rs  (+7 more)
src/commands/casino/: SOURCES.md  aqi.rs  baccarat.rs  bets.rs  blackjack.rs  chess.rs  craps.rs  death_market.rs  duel.rs  faa_airport.rs  gas.rs  gtfs_rt.rs  hilo.rs  join_market.rs  kalshi.rs  launch.rs  mines.rs  mod.rs  nasa_space_weather.rs  noaa_flooding.rs  roulette.rs  scratch.rs  seismic.rs  shoe.rs  sic_bo.rs  slots.rs  sports.rs  train.rs
src/commands/stat_history/: active.rs  add_faq.rs  advancement_count.rs  average_ping.rs  best_ping.rs  blacklist.rs  censor.rs  coords.rs  deaths.rs  delete_faq.rs  edit_faq.rs  efficiency.rs  execute.rs  faq.rs  febzey.rs  firstdeath.rs  firstkill.rs  firstmessage.rs  grudge.rs  helpers.rs  iam.rs  jdpt.rs  joindate.rs  kd.rs  last_advancement.rs  lastdeath.rs  lastkill.rs  lastmessage.rs  list_quote_servers.rs  mod.rs  mount.rs  namefind.rs  nickname.rs  (+30 more)
src/constants/: mod.rs  quote_servers.rs
src/events/: mod.rs
src/structure/: logger.rs  mod.rs
(+45 files in other folders)
