[package]
name = "ForestBot-RS"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
azalea = { git = "https://github.com/azalea-rs/azalea" }
azalea-viaversion = { git = "https://github.com/azalea-rs/azalea-viaversion" }
colored = "3.1.1"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["fs", "macros", "rt-multi-thread"] }
