[package]
name = "ForestBot-RS"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
azalea = { git = "https://github.com/azalea-rs/azalea", rev = "ddef37118448b639ff56b86ae339e8913cb4ed11" }
azalea-inventory = { git = "https://github.com/azalea-rs/azalea", rev = "ddef37118448b639ff56b86ae339e8913cb4ed11" }
azalea-viaversion = { git = "https://github.com/azalea-rs/azalea-viaversion" }
colored = "3.1.1"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
zstd = "0.13"
sysinfo = "0.33"
uuid = "1.18.1"
rand = "0.8"
connect-four-ai = { git = "https://github.com/benjaminrall/connect-four-ai", rev = "28a112adaf3ff89ee23fb09411fa592b6597010e" }
cl-wordle = { git = "https://github.com/conradludgate/wordle", rev = "61fd1f0d53154d44532e4de50b68e219048330aa", default-features = false }
rss = "2"
urlencoding = "2"
whatlang = "0.16"
